<resources>
    <string name="app_name">LPC_CARS</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="languages">Languages</string>
    <string name="log_out">Log out</string>
    <string name="edit_profile">Edit profile</string>
    <string name="personal_details">Personal Details</string>
    <string name="phone">Phone:</string>
    <string name="cin">CIN:</string>
    <string name="license_no">License No:</string>
    <string name="connected_to_lpc">Connected to LPC Partnerships</string>
    <string name="live_contracts">Live Contracts</string>
    <string name="awaiting_reservations">Awaiting reservations</string>
    <string name="help_support">Help Support</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
</resources>